# Azure-Data-Engineering-Training

./: README.md
Python/: factorial.py  square_list_comp.py  square_numbers.py  test_factorial.py  test_square_list_comp.py  test_square_numbers.py
SQL/: Assignment_2.docx  assigment31july.sql  assignment3.docx  assinment_1.docx
data_analyzer_personal_project/: README.md  README.txt  main.py  requirements.txt
data_analyzer_personal_project/ui/: sidebar.md  styles.md
python/py_assignment_1/: factorial.py  square_list_comp.py  square_numbers.py  test_factorial.py  test_listcomp.py  test_square_numbers.py
python/python_project_1/: README.md  requirements.txt
python/python_project_1/files/: Items.csv  Sales.csv  avg_costs.csv
python/python_project_1/src/: main.py
python/python_project_1/test/: test_sales.py
python/python_project_poetry/average-cost-calculator/: README.md  pyproject.toml
python/python_project_poetry/average-cost-calculator/average_cost_calculator/: main.py
python/python_project_poetry/average-cost-calculator/tests/: test_sales.py
python/python_project_poetry/files/: avg_costs.csv
